# push2talk

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: api.ts  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  config.rs  engine.rs  hardware.rs  lib.rs  main.rs  models.rs  transcribe.rs
src-tauri/src/hotkey/: linux.rs  macos.rs  mod.rs
src-tauri/src/typist/: linux.rs  macos.rs  mod.rs
